@@ -222,6 +222,7 @@ Arnaud Delobelle
 Erik Demaine
 John Dennis
 Roger Dev
+Philippe Devalkeneer
 Raghuram Devarakonda
 Caleb Deveraux
 Catherine Devlin
